<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    >

    <!-- 获取用户输入的超级密钥对话框 -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="5dp"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_dialog_super_key_input_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_super_key_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_dialog_super_key_msg"
        android:textSize="15sp"
        android:layout_below="@id/text_dialog_super_key_input_title"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/dialog_super_key_msg"
        android:layout_marginHorizontal="25dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_dialog_super_key_input"
        android:layout_below="@id/text_dialog_super_key_msg"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/dialog_super_key_edit"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_dialog_super_key"
        android:layout_below="@id/edit_dialog_super_key_input"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/dialog_super_key_btn"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_dialog_super_key_error"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/dialog_super_key_error"
        android:layout_below="@id/edit_dialog_super_key_input"
        android:layout_alignLeft="@id/edit_dialog_super_key_input"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        />

</RelativeLayout>

</androidx.cardview.widget.CardView>