<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_slot_numbers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_show_slots"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/string_slots_number"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_show_slots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_slot_numbers"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="40dp"
            >

            <include
                layout="@layout/card_layout_slot_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <View android:layout_height="0dp"
                android:layout_width="120dp"
                />

            <include
                layout="@layout/card_layout_slot_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_show_slots"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/text_slot_note"
        android:textSize="15sp"
        android:text="@string/string_text_note_warn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_slot_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_slot_note"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/string_button_switch_slot_text"
        />


    <include
        layout="@layout/bottom_layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>